fix with slogan and title.Our template is according to hero

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3160,7 +3160,7 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background-color:firebrick;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
