--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2641,7 +2641,7 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #ED4933;
 			color: #c7ebe8;
 		}
 
@@ -2799,7 +2799,6 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
 			color: #d3d4e4;
 		}
 
